examples/errors/task_panic_observe.mgo
package main

import "task"

func fail() {
	panic("worker failed")
}

func main() {
	go fail()

	// go fiber 的 panic 会直接让整个 VM 执行失败。
	task.Yield()
}
